@@ -1,4 +1,7 @@
 ----------------------------------
+[2008-12-05 Ver 0.31 -> 0.32]
+- Replaced mbstring.detect_order(from 'auto' to 'sjis-win,eucjp-win,jis,utf-8,ascii').
+----------------------------------
 [2008-12-04 Ver 0.30 -> 0.31]
 - Replaced indent(from tab to space).
 - Modified mobile pager. If part of pages is empty, skip this.
